# GeneralizedKrawczykSolver

./: .gitignore  CMakeLists.txt  DebugKrawczyk.cpp  LICENSE  README.md  README_CN.md  ToleranceEmbeddingFinalSolution.cpp  simple_test.cpp
cmake/: IntervalKrawczykConfig.cmake.in
demos/: CMakeLists.txt  ComplexPolynomialDemo.cpp  FixedDemo.cpp  GeneralizedKrawczykAdvancedDemo.cpp  GeneralizedKrawczykDemo.cpp  GeneralizedKrawczykHomotopy.cpp  HomotopyDemoSimple.cpp  KrawczykDemo.cpp  ToleranceEmbeddingFinal.cpp  ToleranceEmbeddingFinalSolution.cpp  ToleranceEmbeddingFixed.cpp  ToleranceEmbeddingFixedSimple.cpp  ToleranceEmbeddingHomotopy.cpp
include/interval_krawczyk/: GeneralizedKrawczykSolver.h  IntervalMatrix.h  IntervalVector.h  KaucherInterval.h
tests/: AESolutionSetTest.cpp  CMakeLists.txt  DebugKrawczyk.cpp  DebugTest2.cpp  ExpandingMapTest.cpp  FixedIntervalTest.cpp  IntervalVectorTest.cpp  KaucherArithmeticTest.cpp  OriginalKrawczykTest.cpp  SimpleTest.cpp  ToleranceEmbeddingCorrect.cpp  ToleranceEmbeddingTest.cpp
